# curator-desktop

./: .gitignore  package-lock.json
.codex/skills/confluence-summarizer/: SKILL.md
.codex/skills/release-note-draft/: SKILL.md
.codex/skills/release-note-draft/references/: template.md
.codex/skills/workspace-toolkit/: SKILL.md  skill.tools.json
.codex/skills/workspace-toolkit/assets/mock-workspace/apps/: README.md
.codex/skills/workspace-toolkit/assets/mock-workspace/docs/: README.md
.codex/skills/workspace-toolkit/scripts/: list-overview.js
.github/workflows/: backend-confluence-integration.yml  backend-tests.yml  test.yml
apps/backend/: README.md  pyproject.toml  pytest.ini
apps/backend/src/: chat_service.py  config.py  main.py  models.py  providers.py  schemas.py  skills.py  tool_runner.py
apps/backend/src/confluence/: __init__.py  actions.py  client.py  config.py
apps/backend/src/services/: chat_service.py  confluence_client.py
apps/backend/tests/: test_api.py  test_chat_service.py  test_config_env.py  test_confluence_backend.py  test_confluence_client.py  test_provider_http_integration.py  test_providers.py  test_skills.py
apps/desktop/: package.json  playwright.config.ts  vite.config.test.ts
apps/desktop/e2e/: chat.spec.ts  navigation.spec.ts  settings.spec.ts
apps/desktop/src/: App.tsx
apps/desktop/src/main/: settingsStore.ts
apps/desktop/src/renderer/src/: App.tsx
apps/desktop/src/renderer/src/assets/: main.css
apps/desktop/src/types/: settings.ts
docs/: agent-collaboration.md  human-release-notes.md
(+5 files in other folders)
