[project]
name = "curator-backend"
version = "0.1.0"
description = "FastAPI backend for Curator Desktop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "uvicorn[standard]>=0.32.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0"
]


[tool.hatch.build.targets.wheel]
packages = ["src"]
